<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spot_name_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <TextView
        android:id="@+id/Spot_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@string/spot_name_1"
        android:hint="@string/spot_name_1"
        />

    <TextView
        android:id="@+id/textView3"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spot_details_label"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/spot_visited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spot_visited_label"/>
    </LinearLayout>

</LinearLayout>